<resources>
    <string name="app_name">PayGuard</string>
    <string name="login">Login</string>
    <string name="dollarAmount1">$50</string>
    <string name="dollarAmount2">$75</string>
    <string name="dollarAmount3">$100</string>
    <string name="customAmount">Custom</string>
    <string name="payment_type">Add pre-authorization</string>
    <string name="current_auth" />
    <string name="tap_card">Tap or insert card</string>
    <string name="pin_1">1</string>
    <string name="pin_2">2</string>
    <string name="pin_3">3</string>
    <string name="pin_4">4</string>
    <string name="pin_5">5</string>
    <string name="pin_6">6</string>
    <string name="pin_7">7</string>
    <string name="pin_8">8</string>
    <string name="pin_9">9</string>
    <string name="pin_back">#BACK#</string>
    <string name="pin_0">0</string>
    <string name="pin_go">#NEXT#</string>
    <string name="pin_total" />
    <string name="confirmation_message">Thank you, you have been pre-approved for %.2f</string>
    <string name="confirm_total">$XX</string>
    <string name="done">Done</string>
    <string name="phone_hint">Enter Phone Number for bill</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">Settings</string>
    <string name="settings_edit_mode">Edit Mode</string>
    <string name="settings_edit_mode_summary">Change the table layout</string>
    <string name="settings_section_header">Options</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="table_label">Table Name</string>
    <string name="tableHeader">Table #%s</string>
    <string name="closeTableButton">Process Table</string>
    <string name="addSeatButton">Add Seat</string>
    <string name="seatInfoText">Seat #%d\nLimit: $%.2f\nBill: $%.2f</string>
    <string name="settings_logout">Logout</string>
    <string name="settings_edit_logout">Logout from PayGuard</string>
    <string name="EditValue1">+$25</string>
    <string name="editAmount2">+$50</string>
    <string name="editAmount3">+$100</string>
    <string name="bill_limit">Limit: %.2f</string>
    <string name="bill_table_num">Table #%s</string>
    <string name="update_bill">Update Bill</string>
    <string name="expMonth">mm</string>
    <string name="expYear">yy</string>
    <string name="cvc">cvc</string>
    <string name="PAN">Enter CC number here</string>
    <string name="manualPayButton">Next</string>
    <string name="endBillConfirm">Are you sure you want to bill customer #%d $%.2f?</string>
    <string name="endBillAllConfirm">Are you sure you want to bill all customers at table #%s?</string>
    <string name="send_bill">Send Bill</string>
</resources>
