<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".payment">

    <Button
        android:id="@+id/dollarAmount1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dollarAmount1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.306" />

    <Button
        android:id="@+id/dollarAmount2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/dollarAmount2"
        app:layout_constraintTop_toBottomOf="@+id/dollarAmount1"
        tools:layout_editor_absoluteX="436dp" />

    <Button
        android:id="@+id/dollarAmount3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/dollarAmount3"
        app:layout_constraintTop_toBottomOf="@+id/dollarAmount2"
        tools:layout_editor_absoluteX="436dp" />

    <Button
        android:id="@+id/customAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/customAmount"
        app:layout_constraintTop_toBottomOf="@+id/dollarAmount3"
        tools:layout_editor_absoluteX="436dp" />
</androidx.constraintlayout.widget.ConstraintLayout>