<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ca.payguard.EmailConfirmation">

    <TextView
        android:id="@+id/ConfirmationMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirmation_message"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/confirm_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm_total"
        app:layout_constraintBottom_toBottomOf="@+id/ConfirmationMessage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.08"
        app:layout_constraintStart_toEndOf="@+id/ConfirmationMessage"
        app:layout_constraintTop_toTopOf="@+id/ConfirmationMessage"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/phone_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/phone_hint"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/confirm_total"
        app:layout_constraintHorizontal_bias="0.337"
        app:layout_constraintStart_toStartOf="@+id/ConfirmationMessage"
        app:layout_constraintTop_toBottomOf="@+id/ConfirmationMessage"
        app:layout_constraintVertical_bias="0.07" />

    <Button
        android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:onClick="onButtonClick"
        android:text="@string/done"
        app:layout_constraintEnd_toEndOf="@+id/phone_num"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@+id/phone_num"
        app:layout_constraintTop_toBottomOf="@+id/phone_num" />
</androidx.constraintlayout.widget.ConstraintLayout>
